--- a/res/layout/event_row.xml
+++ b/res/layout/event_row.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/event_row"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:padding="5dp"
-    android:orientation="horizontal"
-    android:onClick="onEventRowClicked" >
+    android:orientation="horizontal" >
     
     <ImageView 
         android:id="@+id/event_icon_image"
