--- a/res/layout/news.xml
+++ b/res/layout/news.xml
@@ -2,8 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:background="@color/tihBlue">
+    android:orientation="vertical" >
     
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/progress_view"
+        android:animationCache="true"
+        android:fadingEdge="vertical"
+        android:fastScrollEnabled="true"
+        android:scrollingCache="false"
+        android:smoothScrollbar="true" />
 
 </LinearLayout>
