--- a/res/layout/news_item_row.xml
+++ b/res/layout/news_item_row.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/white" >
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="25dp"
         android:orientation="horizontal"
         android:padding="2.5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
+        android:paddingRight="0dp"
         android:background="@color/tihBlue" >
 
         <TextView
@@ -18,6 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_alignParentLeft="true"
+            android:layout_marginLeft="10dp"
             android:textColor="@color/white" />
 
         <ImageView
@@ -29,31 +30,46 @@
             android:src="@drawable/twitter_icon" />
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="10dp"
-        android:weightSum="6" >
+        android:paddingBottom="0dp" >
 
         <ImageView
             android:id="@+id/row_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:contentDescription="user_image" />
 
         <TextView
             android:id="@+id/news_body"
+            android:layout_toRightOf="@id/row_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="22dp"
             android:text="@string/news_body_placeholder" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/news_author"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/news_author_placeholder" />
-
+        
+        <ImageView
+            android:id="@+id/indicator"
+            android:contentDescription="indicator"
+            android:layout_centerInParent="true"
+            android:layout_alignParentRight="true"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/grey_arrow" />
+        
+        <TextView
+            android:id="@+id/news_author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="60dp"
+            android:layout_below="@id/news_body"
+            android:text="@string/news_author_placeholder" />
+        
+    </RelativeLayout>
+	    
 </LinearLayout>
