--- a/res/layout/news_item_row.xml
+++ b/res/layout/news_item_row.xml
@@ -34,8 +34,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="10dp"
-        android:paddingBottom="0dp" >
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="3dp" >
 
         <ImageView
             android:id="@+id/row_image"
