--- a/res/layout/schedule.xml
+++ b/res/layout/schedule.xml
@@ -1,109 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentTop="true"
-        android:background="#EAE7E7"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+    
+     <LinearLayout
+        android:id="@+id/progress_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:visibility="gone" >
 
-        <LinearLayout
-            android:id="@+id/progress_view"
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+
+        <TextView
+            android:id="@+id/progress_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical" >
-
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/progress_bg" />
-
-                <ProgressBar
-                    android:layout_width="30dip"
-                    android:layout_height="30dip"
-                    android:layout_gravity="center_horizontal|bottom"
-                    android:layout_marginBottom="5dip" />
-            </FrameLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Loading, Please Wait..."
-                android:textAppearance="@android:style/TextAppearance.Medium"
-                android:textColor="#000000"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/connection_status_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone" >
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/progress_bg" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Unable To Connect"
-                android:textAppearance="@android:style/TextAppearance.Medium"
-                android:textColor="#000000"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@drawable/odd_result_bg"
-                android:clickable="true"
-                android:focusable="true"
-                android:onClick="onTryAgainClicked"
-                android:padding="10dip"
-                android:text="Please Try Again"
-                android:textColor="#000000"
-                android:textSize="10dip"
-                android:textStyle="bold" />
-        </LinearLayout>
+            android:paddingTop="4dp"
+            android:textSize="14sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
-    <com.unifeed.components.PullToRefreshListView
-        android:id="@+id/pull_to_refresh_listview"
+    <LinearLayout
+        android:id="@+id/content_container"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/progress_view"
-        android:animationCache="true"
-        android:fadingEdge="vertical"
-        android:fastScrollEnabled="true"
-        android:scrollingCache="false"
-        android:smoothScrollbar="true"
-        android:visibility="gone" />
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/progress_view"
-        android:animationCache="true"
-        android:fadingEdge="vertical"
-        android:fastScrollEnabled="true"
-        android:scrollingCache="false"
-        android:smoothScrollbar="true"
-        android:visibility="gone" />
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:animationCache="true"
+            android:fadingEdge="vertical"
+            android:fastScrollEnabled="true"
+            android:scrollingCache="false"
+            android:smoothScrollbar="true" />
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
