--- a/res/layout/event_detail.xml
+++ b/res/layout/event_detail.xml
@@ -28,8 +28,8 @@
                 android:visibility="gone"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
-                android:paddingRight="10dp"
-                android:paddingBottom="20dp" />
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="20dp" />
         </RelativeLayout>
 
         <TextView
