--- a/res/layout/photo_pit_row.xml
+++ b/res/layout/photo_pit_row.xml
@@ -1,17 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical"
-    android:background="@color/white" >
-    
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp" >
+
+    <ImageView
+        android:id="@+id/tiny_clock"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/tiny_clock" >
+    </ImageView>
+
+    <TextView
+        android:id="@+id/days_ago"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_toLeftOf="@id/tiny_clock"
+        android:paddingRight="5dp" />
+
+    <RelativeLayout
+        android:id="@+id/insta_image_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="375dp"
+        android:layout_marginTop="8dp" >
+
+        <ImageView
+            android:id="@+id/insta_image"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:src="@drawable/photo_pit_load" />
+
+        <ProgressBar
+            android:id="@+id/image_progress"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="20dp"
+            android:layout_marginRight="10dp"
+            android:indeterminate="true"
+            android:visibility="gone" />
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/user_image"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:background="@color/tihBlue"
-        android:orientation="vertical" >
-
-    </LinearLayout>    
+        android:src="@drawable/default_event_icon"
+        android:layout_below="@id/insta_image_layout"
+        android:contentDescription="user_image" />
     
+    <TextView
+        android:id="@+id/photo_author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/insta_image_layout"
+        android:layout_marginLeft="60dp"
+        android:text="@string/photo_author_placeholder" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/photo_body"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="22dp"
+        android:layout_toRightOf="@id/user_image"
+        android:layout_below="@id/photo_author"
+        android:text="@string/photo_body_placeholder" />
+
+</RelativeLayout>
