--- a/res/layout/photo_pit.xml
+++ b/res/layout/photo_pit.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:scrollbars="none" >
     
     <LinearLayout
         android:id="@+id/progress_container"
@@ -73,10 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/progress_view"
             android:animationCache="true"
-            android:fadingEdge="vertical"
-            android:fastScrollEnabled="true"
-            android:scrollbars="none"
-            android:scrollingCache="false" />
+            android:scrollbars="none" />
     </LinearLayout>
    
 </LinearLayout>
