--- a/res/layout/splash_screen.xml
+++ b/res/layout/splash_screen.xml
@@ -18,7 +18,9 @@
             android:id="@+id/splash_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="20dp"
+            android:layout_marginRight="10dp" />
     </FrameLayout>
 
 </LinearLayout>
