--- a/res/layout/event_row.xml
+++ b/res/layout/event_row.xml
@@ -27,14 +27,16 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:textIsSelectable="false" />
         
         <TextView
             android:id="@+id/event_time"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textIsSelectable="false" />
         
     </LinearLayout>
 </LinearLayout>
