--- a/res/layout/news.xml
+++ b/res/layout/news.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -24,6 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="4dp"
+            android:textIsSelectable="false"
             android:textSize="14sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -34,45 +36,25 @@
         android:layout_height="fill_parent"
         android:orientation="vertical" >
 
-        <LinearLayout
+        <include
+            android:id="@+id/tabs_layout_ref"
             android:layout_width="fill_parent"
-            android:layout_height="25dp"
-            android:background="@color/lighter_gray"
-            android:orientation="horizontal"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="5dp" >
-
-            <ImageView
-                android:id="@+id/official_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="official tab"
-                android:src="@drawable/official_blue" />
-
-            <ImageView
-                android:id="@+id/fan_feed_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="fan feed tab"
-                android:src="@drawable/fan_feed_grey" />
-        </LinearLayout>
+            android:layout_height="40dp"
+            layout="@layout/feed_tabs_layout" />
 
         <ImageView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:contentDescription="tab header"
+            android:scaleType="fitXY"
             android:src="@drawable/tab_header_cap" />
 
         <ListView
             android:id="@+id/listview"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/progress_view"
             android:animationCache="true"
-            android:scrollbars="none" />
+            android:scrollbars="none"
+            tools:listitem="@layout/news_item_row" />
     </LinearLayout>
 
 </LinearLayout>
