--- a/res/layout/photo_pit.xml
+++ b/res/layout/photo_pit.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:scrollbars="none" >
-    
+
     <LinearLayout
         android:id="@+id/progress_container"
         android:layout_width="match_parent"
@@ -25,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="4dp"
+            android:textIsSelectable="false"
             android:textSize="14sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -33,48 +35,24 @@
         android:id="@+id/content_container"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:background="@color/tihBlue">
+        android:background="@color/tihBlue"
+        android:orientation="vertical" >
 
-        <LinearLayout
+        <include
+            android:id="@+id/tabs_layout_ref"
             android:layout_width="fill_parent"
-            android:layout_height="25dp"
-            android:background="@color/lighter_gray"
-            android:orientation="horizontal"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="5dp" >
-
-            <ImageView
-                android:id="@+id/official_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="official tab"
-                android:src="@drawable/official_grey" />
-
-            <ImageView
-                android:id="@+id/fan_feed_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="fan feed tab"
-                android:src="@drawable/fan_feed_grey" />
-        </LinearLayout>
-
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="tab header"
-            android:src="@drawable/tab_header_cap" />
+            android:layout_height="40dp"
+            layout="@layout/feed_tabs_layout" />
 
         <ListView
             android:id="@+id/listview"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/progress_view"
             android:animationCache="true"
-            android:scrollbars="none" />
+            android:background="@color/white"
+            android:focusable="false"
+            android:scrollbars="none"
+            tools:listitem="@layout/photo_pit_row" />
     </LinearLayout>
-   
+
 </LinearLayout>
