--- a/res/layout/schedule.xml
+++ b/res/layout/schedule.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-    
-     <LinearLayout
+
+    <LinearLayout
         android:id="@+id/progress_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,6 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="4dp"
+            android:textIsSelectable="false"
             android:textSize="14sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -33,45 +35,60 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical" >
-        
-         <LinearLayout
+
+        <RelativeLayout
+            android:id="@+id/tabs_layout"
             android:layout_width="fill_parent"
             android:layout_height="40dp"
             android:background="@color/lighter_gray"
             android:orientation="horizontal"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
             android:paddingTop="5dp" >
-            <ImageView
-                android:id="@+id/day_one_tab"
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:id="@+id/tabs_container"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="day 1 tab"
-                android:src="@drawable/day_one_tab_blue" />
+                android:background="@color/lighter_gray"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/day_one_tab"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:src="@drawable/day_one_tab_blue" />
+
+                <ImageView
+                    android:id="@+id/day_two_tab"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:src="@drawable/day_two_tab_grey" />
+
+                <ImageView
+                    android:id="@+id/day_three_tab"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:src="@drawable/day_three_tab_grey" />
+
+                <ImageView
+                    android:id="@+id/day_four_tab"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:src="@drawable/day_four_tab_grey" />
+            </LinearLayout>
+
             <ImageView
-                android:id="@+id/day_two_tab"
-                android:layout_width="wrap_content"
+                android:id="@+id/tab_footer"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="day 2 tab"
-                android:src="@drawable/day_two_tab_grey" />
-            <ImageView
-                android:id="@+id/day_three_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="day 3 tab"
-                android:src="@drawable/day_three_tab_grey" />
-            <ImageView
-                android:id="@+id/day_four_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="day 4 tab"
-                android:src="@drawable/day_four_tab_grey" />
-        </LinearLayout>
-        
+                android:layout_below="@id/tabs_container"
+                android:gravity="bottom"
+                android:scaleType="fitXY"
+                android:src="@drawable/tab_header_cap" />
+        </RelativeLayout>
 
         <ListView
             android:id="@+id/listview"
@@ -81,7 +98,8 @@
             android:fadingEdge="vertical"
             android:fastScrollEnabled="true"
             android:scrollingCache="false"
-            android:smoothScrollbar="true" />
+            android:smoothScrollbar="true"
+            tools:listitem="@layout/event_row" />
     </LinearLayout>
 
 </LinearLayout>
