Adds LRU/Disk caching for the EventDetailList. Other image downloading to follow.

--- a/res/layout/event_detail.xml
+++ b/res/layout/event_detail.xml
@@ -56,7 +56,7 @@
                 android:layout_marginTop="10dp"
                 android:text="@string/artist_description_placeholder" />
 
-            <ImageButton
+<!--             <ImageButton
                 android:id="@+id/website_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -74,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/facebook_button"
-                android:layout_toRightOf="@id/artist_description" />
+                android:layout_toRightOf="@id/artist_description" /> -->
         </RelativeLayout>
     </LinearLayout>
 
