--- a/res/layout/photo_pit.xml
+++ b/res/layout/photo_pit.xml
@@ -35,7 +35,6 @@
         android:id="@+id/content_container"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@color/tihBlue"
         android:orientation="vertical" >
 
         <include
@@ -44,15 +43,10 @@
             android:layout_height="40dp"
             layout="@layout/feed_tabs_layout" />
 
-        <ListView
-            android:id="@+id/listview"
-            android:layout_width="fill_parent"
+        <include
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:animationCache="true"
-            android:background="@color/white"
-            android:focusable="false"
-            android:scrollbars="none"
-            tools:listitem="@layout/photo_pit_row" />
+            layout="@layout/tab_listviews" />
     </LinearLayout>
 
 </LinearLayout>
