--- a/res/layout/news.xml
+++ b/res/layout/news.xml
@@ -36,6 +36,24 @@
         android:layout_height="fill_parent"
         android:orientation="vertical" >
 
+        <TextView
+            android:id="@android:id/empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/hc_bell"
+            android:drawablePadding="8dp"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:padding="8dp"
+            android:shadowColor="#aa00"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="4"
+            android:textColor="#a00"
+            android:textSize="18sp"
+            android:textStyle="bold|italic" >
+        </TextView>
+
         <include
             android:id="@+id/tabs_layout_ref"
             android:layout_width="fill_parent"
@@ -43,6 +61,7 @@
             layout="@layout/feed_tabs_layout" />
 
         <ImageView
+            android:id="@+id/tab_header_cap"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
