--- a/res/layout/schedule.xml
+++ b/res/layout/schedule.xml
@@ -107,6 +107,34 @@
                 android:scaleType="fitXY"
                 android:src="@drawable/tab_header_cap" />
         </RelativeLayout>
+        
+        <RelativeLayout
+            android:id="@+id/schedule_header"
+            android:layout_width="fill_parent"
+            android:layout_height="25dp"
+            android:padding="2.5dp"
+            android:background="@color/tihBlue"
+            android:orientation="horizontal" >
+            
+            <TextView
+                android:id="@+id/header_date"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="5dp"
+                android:textColor="@color/white"
+                android:textIsSelectable="false" />
+
+            <TextView
+                android:id="@+id/header_venue"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_marginRight="5dp"
+                android:layout_alignParentRight="true"
+                android:cropToPadding="false"
+                android:textColor="@color/white" />
+
+        </RelativeLayout>
 
         <ListView
             android:id="@+id/listview"
