--- a/res/layout/schedule.xml
+++ b/res/layout/schedule.xml
@@ -139,7 +139,7 @@
         <ListView
             android:id="@+id/listview"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:animationCache="true"
             android:fadingEdge="vertical"
             android:fastScrollEnabled="true"
