--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -11,6 +11,12 @@
         android:icon="@android:drawable/ic_menu_info_details"
         android:showAsAction="never"
         android:title="@string/accommodations"/>
+    
+    <item
+        android:id="@+id/vendors_item"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:showAsAction="never"
+        android:title="@string/vendors"/>
 
     <item
         android:id="@+id/facebook_item"
