--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -17,6 +17,12 @@
         android:icon="@android:drawable/ic_menu_info_details"
         android:showAsAction="never"
         android:title="@string/vendors"/>
+    
+    <item
+        android:id="@+id/tih_aftershows"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:showAsAction="never"
+        android:title="@string/aftershows"/>
 
     <item
         android:id="@+id/facebook_item"
